@@ -1,0 +1,125 @@
+asteroid_spawn_definitions = { --From space connection
+    {
+      asteroid = "metallic-asteroid-chunk",
+      spawn_points = {
+        {
+          angle_when_stopped = 1,
+          distance = 0.1,
+          probability = 0.0012,
+          speed = 0.016666666666666665
+        },
+        {
+          angle_when_stopped = 1,
+          distance = 0.9,
+          probability = 0.0025,
+          speed = 0.016666666666666665
+        }
+      },
+      type = "asteroid-chunk"
+    },
+    {
+      asteroid = "carbonic-asteroid-chunk",
+      spawn_points = {
+        {
+          angle_when_stopped = 1,
+          distance = 0.1,
+          probability = 0.003,
+          speed = 0.016666666666666665
+        },
+        {
+          angle_when_stopped = 1,
+          distance = 0.9,
+          probability = 0.001875,
+          speed = 0.016666666666666665
+        }
+      },
+      type = "asteroid-chunk"
+    },
+    {
+      asteroid = "oxide-asteroid-chunk",
+      spawn_points = {
+        {
+          angle_when_stopped = 1,
+          distance = 0.1,
+          probability = 0.0006,
+          speed = 0.016666666666666665
+        },
+        {
+          angle_when_stopped = 1,
+          distance = 0.9,
+          probability = 0.000625,
+          speed = 0.016666666666666665
+        }
+      },
+      type = "asteroid-chunk"
+    },
+    {
+      asteroid = "medium-metallic-asteroid",
+      spawn_points = {
+        {
+          angle_when_stopped = 0.6,
+          distance = 0.1,
+          probability = 0.001,
+          speed = 0.016666666666666665
+        },
+        {
+          angle_when_stopped = 0.6,
+          distance = 0.5,
+          probability = 0.0052499999999999991,
+          speed = 0.016666666666666665
+        },
+        {
+          angle_when_stopped = 0.6,
+          distance = 0.9,
+          probability = 0.0025,
+          speed = 0.016666666666666665
+        }
+      }
+    },
+    {
+      asteroid = "medium-carbonic-asteroid",
+      spawn_points = {
+        {
+          angle_when_stopped = 0.6,
+          distance = 0.1,
+          probability = 0.0025,
+          speed = 0.016666666666666665
+        },
+        {
+          angle_when_stopped = 0.6,
+          distance = 0.5,
+          probability = 0.0065625,
+          speed = 0.016666666666666665
+        },
+        {
+          angle_when_stopped = 0.6,
+          distance = 0.9,
+          probability = 0.001875,
+          speed = 0.016666666666666665
+        }
+      }
+    },
+    {
+      asteroid = "medium-oxide-asteroid",
+      spawn_points = {
+        {
+          angle_when_stopped = 0.6,
+          distance = 0.1,
+          probability = 0.0005,
+          speed = 0.016666666666666665
+        },
+        {
+          angle_when_stopped = 0.6,
+          distance = 0.5,
+          probability = 0.0016875,
+          speed = 0.016666666666666665
+        },
+        {
+          angle_when_stopped = 0.6,
+          distance = 0.9,
+          probability = 0.000625,
+          speed = 0.016666666666666665
+        }
+      }
+    }
+  },
