@@ -4,6 +4,8 @@ local saved_asteroid_definitions = {}
 
 local SCALE_FACTOR = 1250 -- Matches the scale in Cosmic-Social-Distancing
 local REAL_SPACE = settings.startup["Redrawn-Space-Connections-real-space-triangulation"].value
+log_once = true
+--local cache = data.raw["space-connection"]["gleba-fulgora"]
 
 local function connection_length(from_name, to_name)
 	local from_planet = data.raw.planet[from_name] or data.raw["space-location"][from_name]
@@ -621,6 +623,64 @@ edges = triangle_filtered_edges
 
 -- edges = angleFilteredEdges
 
+
+
+local function average_spawn_definition(a,b)
+	return
+	{
+		asteroid = a.asteroid or b.asteroid,
+		spawn_points =
+		{
+			{
+				angle_when_stopped = (a.angle_when_stopped/2 or 0) + (b.angle_when_stopped/2 or 0),
+				speed = (a.speed/2 or 0) + (b.speed/2 or 0),
+				probability = (a.probability/2 or 0) + (b.probability/2 or 0),
+				distance = 0.1,
+			},
+			{
+				angle_when_stopped = (a.angle_when_stopped/2 or 0) + (b.angle_when_stopped/2 or 0),
+				speed = (a.speed/2 or 0) + (b.speed/2 or 0),
+				probability = (a.probability/2 or 0) + (b.probability/2 or 0),
+				distance = 0.9,
+			}
+		},
+		type = a.type or b.type,
+	}
+end
+
+--I don't like redundant code, but I'm willing to do redundant calculations if it makes the code base simplier.
+--It is easier to treat this as a black box, and not worry about the slightly unoptimized array to table conversions.
+--Forcing table conversions also allows us to manage cases where two array[SpaceLocationAsteroidSpawnDefinition] have different lengths, because one contains an exclusive asteroid.
+local function average_spawn_definition_array(a,b) 
+    a_as_table = {}
+    b_as_table = {}
+	c_as_array = {}
+	--Step 1 Convert these arrays to a table to make comparing easier.
+	for i=1,#a do 
+        local asteroid_name = a[i].asteroid
+        a_as_table[asteroid_name] = a[i]
+    end
+
+    for i=1,#b do 
+        local asteroid_name = b[i].asteroid
+        b_as_table[asteroid_name] = b[i]
+    end
+
+	for k,v in pairs(a_as_table) do
+		table.insert(c_as_array,average_spawn_definition(a_as_table[k],b_as_table[k]) )
+	end
+
+	for k,v in pairs(b_as_table) do
+		if(a_as_table[k] == nil) then
+			table.insert(c_as_array,average_spawn_definition(v,v) )
+		end
+	end
+
+    return c_as_array
+end
+
+
+
 local function get_asteroid_definitions(from, to)
 	if saved_asteroid_definitions[from .. "-" .. to] then
 		return saved_asteroid_definitions[from .. "-" .. to]
@@ -642,6 +702,28 @@ local function get_asteroid_definitions(from, to)
 		return asteroid_util.spawn_definitions(asteroid_util.nauvis_fulgora), false
 	elseif to == "nauvis" then
 		return asteroid_util.spawn_definitions(asteroid_util.nauvis_fulgora), true
+	end
+
+	
+
+	if (settings.startup["Average-Planet-Asteroid-new-path"].value and data.raw['planet'][from] ~= nil and data.raw['planet'][to] ~= nil ) then
+
+		--log(serpent.block(data.raw['planet'][from].asteroid_spawn_definitions))
+		local out = average_spawn_definition_array(data.raw['planet'][from].asteroid_spawn_definitions,data.raw['planet'][to].asteroid_spawn_definitions)
+		if(log_once) then 
+			log_once = false
+			--log(serpent.block("----"))
+			--log(serpent.block(from))
+			--log(serpent.block(" spawn definitions"))
+			--log(serpent.block(data.raw['planet'][from].asteroid_spawn_definitions))
+			--log(serpent.block("----"))
+			--log(serpent.block("Correct spawn definitions"))
+			--log(serpent.block(cache.asteroid_spawn_definitions))
+			--log(serpent.block("----"))
+			--log(serpent.block("out"))
+			--log(serpent.block(out))
+		end
+		return out, false
 	end
 
 	return asteroid_util.spawn_definitions(asteroid_util.gleba_fulgora), false
