@@ -1,5 +1,7 @@
 [mod-setting-name]
 Redrawn-Space-Connections-route-length-multiplier=Route length multiplier
+Average-Planet-Asteroid-new-path=Average asteroid spawn for new paths
 
 [mod-setting-description]
-Redrawn-Space-Connections-route-length-multiplier=Applies before lengths are rounded to the nearest 1000km. Does not apply to routes for which another mod has specifically requested control over its length.r
+Redrawn-Space-Connections-route-length-multiplier=Applies before lengths are rounded to the nearest 1000km. Does not apply to routes for which another mod has specifically requested control over its length.
+Average-Planet-Asteroid-new-path=Average planet asteroids for new paths if no saved asteroid util found. If false, we use gleba_fulgora asteroid spawns for new paths.
