@@ -8,6 +8,13 @@ data:extend({
 		hidden = true,
 	},
 	{
+		type = "bool-setting",
+		setting_type = "startup",
+		name = "Average-Planet-Asteroid-new-path",
+		forced_value = false,
+		default_value = false,
+	},
+	{
 		type = "double-setting",
 		setting_type = "startup",
 		name = "Redrawn-Space-Connections-route-length-multiplier",
